Fix image border showing 'misalignment' on Chrome and Edge
wut.

--- a/src/_styles.css
+++ b/src/_styles.css
@@ -58,6 +58,7 @@ nav li:first-child {
 main img {
   margin: 0.5em;
   border: 0.62em solid var(--color-a);
+  background: var(--color-a);
 }
 
 main img.right {
